opam-version: "1.2"
available: [ ocaml-version >= "4.02.0" ]
version: "4.0.0"
authors: [ "Julien Sagot" "Emmanuel Surleau" "mackwic" "Andrew Rudenko" "orbifx"]
maintainer: "support@toml.epimeros.org"
homepage: "http://mackwic.github.io/To.ml/"
build: [ "jbuilder" "build" "-p" name]
build-test: [
  ["jbuilder" "runtest"]
]
depends: [
  "dune" {build}
  "menhir" {build}
  "ounit" {test}
  "bisect" {test}
  "odoc" {doc}
  "ISO8601"
]
bug-reports: "https://github.com/mackwic/To.ml/issues"
dev-repo: "https://github.com/mackwic/To.ml.git"
