opam-version: "2.0"
authors: [ "Julien Sagot" "Emmanuel Surleau" "mackwic" "Andrew Rudenko" "orbifx" "c-cube"]
maintainer: "OCamlPro <contact@ocamlpro.com>"
homepage: "https://ocamlpro.github.io/toml/"
synopsis: "Interface between cconv and toml"
description: "Allows to use TOML encoding/decoding with cconv"
build: [ "dune" "build" "-p" name]
license: "LGPL3"
depends: [
  "ocaml" {>= "4.02"}
  "dune" {build}
  "toml"
  "cconv"
]
bug-reports: "https://github.com/ocamlpro/toml/issues"
dev-repo: "git+https://github.com/ocamlpro/toml.git"
