opam-version: "2.0"
authors: [ "Julien Sagot" "Emmanuel Surleau" "mackwic" "Andrew Rudenko" "orbifx" "c-cube"]
maintainer: "OCamlPro <contact@ocamlpro.com>"
homepage: "https://ocaml-toml.github.io/To.ml/"
synopsis: "Interface between cconv and toml"
description: "Allows to use TOML encoding/decoding with cconv"
build: [ "dune" "build" "-p" name]
license: "LGPL3"
depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "1.2"}
  "toml"
  "cconv"
]
bug-reports: "https://github.com/ocaml-toml/to.ml/issues"
dev-repo: "git+https://github.com/ocaml-toml/to.ml.git"
